rs6000: Initialise rs6000_cpu correctly (PR43871)

Finally, set rs6000_cpu based not on -mtune=, but only -mcpu= and the
defaults.


	PR target/43871
	* config/rs6000/rs6000.c (rs6000_option_override_internal): Set
	rs6000_cpu to the given -mcpu=, or to the default processor.

From-SVN: r255464